--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.1",
     "allure-playwright": "^3.3.2"
+  },
+  "dependencies": {
+    "csv-parse": "^6.1.0",
+    "dotenv": "^17.2.1",
+    "xlsx": "^0.18.5"
   }
 }
